# project-audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Project Audio.cpp  Project Audio.h  README.md  commands.cpp  main.cpp  miniaudio.c  project-audio.cpp  retry.cpp  utilities.cpp
include/: audioMaster.hpp  audioPlayer.hpp  audioSetup.hpp  commandExecutor.hpp  commandParsing.hpp  commands.h  dataCallback.h  dataCallback.hpp  globalVars.hpp  helpCommand.h  helpCommand.hpp  inputHandling.h  inputHandling.hpp  main.h  main.hpp  miniaudio.h  outputProcessor.hpp  playbackControl.h  playbackControl.hpp  playlist.h  playlist.hpp  playlistManager.hpp  seeker.hpp  seeking.hpp  time.h  timeChecker.hpp  utilities.h  volumeControl.h  volumeControl.hpp
include/helpers/: audioPlayer.hpp  playlistMaster.hpp  queueMaster.hpp  seeker.hpp  timeChecker.hpp  volumeController.hpp
libraries/: miniaudio.h
playlist test/: YOURE A DEAD MAN.mp  playlist.txt
src/: TBA.txt  audioDevice.cpp  audioMaster.cpp  commandParsing.cpp  dataCallback.cpp  globalVarsDefaults.cpp  helpCommand.cpp  inputHandling.cpp  main.cpp  miniaudio.c  outputProcessor.cpp  playbackControl.cpp  playbackImplementation.cpp  playlist.cpp  playlistImplementation.cpp  seeking.cpp  songQueuerthing.cpp  time.cpp  volumeControl.cpp
src/helpers/: audioPlayer.cpp  queueMaster.cpp  savedQueue.txt  seeker.cpp  timeChecker.cpp  volumeController.cpp
unneeded/: main.cpp.old
